# jupyterlab-fonts

./: .eslint.tsconfig.json  .eslintignore  .eslintrc.js  .gitignore  .prettierrc  .travis.yml  .yarnrc  .yarnrc.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  anaconda-project.yml  dodo.py  environment.yml  labex.txt  lerna.json  package.json  postBuild  pyproject.toml  setup.cfg  setup.py  tsconfigbase.json  tslint.json  webpack.config.js
.binder/: environment.yml  overrides.json  postBuild
.github/: .condarc
.github/ISSUE_TEMPLATE/: bug_report.md  docs.md  feature_request.md  release.md
.github/specs/: __lock__.py  __lock__.toml  _atest.yml  _base.yml  _build.yml  _lab.yml  _lint.yml  _node.yml  _py.yml  _utest.yml  atest.yml  binder.yml  build.yml  lab.yml  lock.yml
.github/specs/_lab/: lab3.5.yml  lab3.6.yml  lab4.0.yml
.github/specs/_py/: py3.11.yml  py3.8.yml
.github/workflows/: ci.yml
atest/: Cells.robot  Editor.robot  Global.robot  Menus.robot  Notebook.robot  __init__.robot  _coverage.resource  _keywords.resource  _keywords.robot  _variables.resource
atest/fixtures/: overrides.json
examples/: index.ipynb
nbjss/: __init__.py  constants.py  preprocessor.py
nbjss/static/: nbjss.jss.json
scripts/: __init__.py  _labextension.py  actions.py  build.py  dedupe.py  env.sh  lab.py  labextension.py  sync.sh  watch.py  watch.sh
src/: index.js
src/jupyterlab_fonts/: __init__.py  _version.py  constants.py  install.json  preprocessor.py
src/jupyterlab_fonts/tests/: test_metadata.py
tests/: __init__.py  test_metadata.py
tests/acceptance/: Editor.robot  Menus.robot  __init__.robot
tests/etc/: jupyter_notebook_config.json
tests/resources/: Browser.robot  Fonts.py  Lab.robot  Notebook.robot  testserverextension.py
